NierDance.theme.css
/* ... */
.ui-standard-sidebar-view,.chat {z-index:1}
.theme-dark .side-8zPYf6 .itemDefault-3Jdr52 {background: rgba(152,145,126,.5);font-weight: 600;color: rgb(75,74,66);border-radius: 0px}
.theme-dark .side-8zPYf6 .itemDefault-3Jdr52:hover{width: 103%;background: rgba(65,64,56,.8)!Important;color: rgb(212,205,186)!Important}
.theme-dark .header-2RyJ0Y,#bd-settings-sidebar .ui-tab-bar-header{display:inline-table;width:auto;transform:translateX(-20%);font-weight:700;font-size:16px;color:rgb(65,64,56)!Important;text-shadow: 2px 3px rgba(65,64,56,.3)}
.side-8zPYf6 .item-PXvHYJ,#bd-settings-sidebar .ui-tab-bar-item{background:rgba(152,145,126,.5);font-weight:600;color:rgb(75,74,66);border-radius:0px}
.side-8zPYf6 .item-PXvHYJ:hover,.side-8zPYf6 .itemSelected-1qLhcL,#bd-settings-sidebar .ui-tab-bar-item:hover{width:103%;background:rgba(65,64,56,.8)!Important;color:rgb(212,205,186)!Important}
.ui-standard-sidebar-view .bda-slist .bda-description { border-top: 1px solid #000000; color: #ffffff; text-shadow: 1px 1px 2px black;}
.ui-standard-sidebar-view .content-region { margin-top: 80px; margin-bottom: 20px;}
.ui-standard-sidebar-view .tools { margin-right: 0px; padding-top: 0px;}
.ui-standard-sidebar-view .btn-close{ border-radius: 0}

/* make quickswitcher transparent */
.channelNotices-41mJbj .channelNotice-1-XFjC.quickswitcher-35bYg4 {background: TRansparent url(/assets/8fdb69b7684b8e1ecb3fdde909daca41.svg) no-repeat center 35px;padding: 100px 20px 20px}

/*the badged in profile for userslinked accouts */
.connectedAccount-36nQx7{position: relative}
.connectedAccountIcon-3P3V6F,.connectedAccountName-f8AEe2,.connectedAccountVerifiedIcon-3aZz_K, .body-3ND3kc a {z-index:1;color:white;border-color:transparent}
img[src="/assets/f09c1c70a67ceaaeb455d163f3f9cbb8.png"] + div:before {content:"";height:46px;width:262px;background:hsl(0, 0%, 10%);position:absolute;margin-left:-38px}
img[src="/assets/ff3516ac66b71ef616b1df63e20fee65.png"] + div:before {content:"";height:46px;width:262px;background:hsl(0, 95%, 40%);position:absolute;margin-left:-38px}
img[src="/assets/806953fe1cc616477175cbcdf90d5cd3.png"] + div:before {content:"";height:46px;width:262px;background:hsl(40, 75%, 40%);position:absolute;margin-left:-38px}
img[src="/assets/4662875160dc4c56954003ebda995414.png"] + div:before {content:"";height:46px;width:262px;background:hsl(200, 100%, 45%);position:absolute;margin-left:-38px}
img[src="/assets/3abe9ce5a00cc24bd8aae04bf5968f4c.png"] + div:before {content:"";height:46px;width:262px;background:hsl(15, 90%, 45%);position:absolute;margin-left:-38px}
img[src="/assets/8c289d499232cd8e9582b4a5639d9d1d.png"] + div:before {content:"";height:46px;width:262px;background:hsl(200, 80%, 30%);position:absolute;margin-left:-38px}
img[src="/assets/edbbf6107b2cd4334d582b26e1ac786d.png"] + div:before {content:"";height:46px;width:262px;background:hsl(260, 40%, 30%);position:absolute;margin-left:-38px}
img[src="/assets/5be6cc17e596c02e7506f2776cfb1622.png"] + div:before {content:"";height:46px;width:262px;background:hsl(205, 70%, 40%);position:absolute;margin-left:-38px}
img[src="/assets/f0655521c19c08c4ea4e508044ec7d8c.png"] + div:before {content:"";height:46px;width:262px;background:hsl(140, 75%, 35%);position:absolute;margin-left:-38px}
img[src="/assets/8d8f815f3d81a33b1e70ec7c22e1b6fe.png"] + div:before {content:"";height:46px;width:262px;background:hsl(235, 75%, 25%);position:absolute;margin-left:-38px}

/*discord home*/
.theme-dark .activityFeed-28jde9 {background: 0 0}
.theme-dark .card-7JP0BX {background: rgba(0,0,0,.2)}
.theme-dark .discriminator-pIKHPn,.theme-dark .dockItemText-3qYREY,.theme-dark .headerText-2niCs_,.theme-dark .playTime-1laRtO,.theme-dark .playTime-2SuPqW {color: #414038}
.theme-dark .lookFilled-1Gx00P.colorPrimary-3b3xI6 {background: #414038}
.theme-dark .lookFilled-1Gx00P.hoverBrand-1_Fxlk.hasHover-3X1-zV:hover,.theme-light .lookFilled-1Gx00P.hoverBrand-1_Fxlk.hasHover-3X1-zV:hover {background: #c86565}
.theme-dark .card-7JP0BX {border-radius:0;background-color: rgba(196,194,171,.8)}
.theme-dark .header-1RC2Wb:hover {background-color: rgba(0,0,0,.4)}
.carousel-JbsNzL,.news-2GDtLJ,.paginationItem-3-MBTL:hover,.selectedPage-2JQS2s,.theme-dark .dockItem-2kQDqg:hover,.theme-dark .header-1RC2Wb {background-color: rgba(0,0,0,.6)}
.article-FleDq5 {background-color: transparent}

/*IncallUI & Videocalls*/
.callAvatar-v-u4BM.voice-2D-tt_ {border-radius: 12%}
.callAvatarBorder-1D_KaE.voice-2D-tt_.speaking-oCqYMI {border-radius: 12%}
.video-1FfuMD {background-color: rgba(48, 47, 48, 0.35)}
.theme-dark .wrapper-29NfPK {background-color: transparent}



/* Setting Icons */
.ui-standard-sidebar-view .sidebar-region .sidebar .side-8zPYf6 .item-PXvHYJ,#bd-settings-sidebar .ui-tab-bar-item{padding-left:30px}
.ui-standard-sidebar-view .sidebar-region .sidebar .side-8zPYf6 .item-PXvHYJ:before,#bd-settings-sidebar .ui-tab-bar-item:before{content:"";position: absolute;left:0;top:4px;height:24px;width:24px;}
.ui-standard-sidebar-view .sidebar-region .sidebar .side-8zPYf6 .item-PXvHYJ:nth-child(2):before{background:url(https://cdn.rawgit.com/Zerthox/ClearVision/master/icons/person.svg)}
.ui-standard-sidebar-view .sidebar-region .sidebar .side-8zPYf6 .item-PXvHYJ:nth-child(3):before{background:url(https://cdn.rawgit.com/Zerthox/ClearVision/master/icons/security.svg)}
.ui-standard-sidebar-view .sidebar-region .sidebar .side-8zPYf6 .item-PXvHYJ:nth-child(4):before{background:url(https://cdn.rawgit.com/Zerthox/ClearVision/master/icons/apps.svg)}
.ui-standard-sidebar-view .sidebar-region .sidebar .side-8zPYf6 .item-PXvHYJ:nth-child(5):before{background:url(https://cdn.rawgit.com/Zerthox/ClearVision/master/icons/link.svg)}
.ui-standard-sidebar-view .sidebar-region .sidebar .side-8zPYf6 .item-PXvHYJ:nth-child(6):before{background:url(https://cdn.rawgit.com/Zerthox/ClearVision/master/icons/link.svg)}
/* ... */

